structmeta-tests/tests/compile_fail/to_tokens/not_impl_to_tokens.stderr
error[E0277]: the trait bound `X: ToTokens` is not satisfied
 --> tests/compile_fail/to_tokens/not_impl_to_tokens.rs:4:5
  |
4 |     x: X,
  |     ^ the trait `ToTokens` is not implemented for `X`
  |
  = help: the following other types implement trait `ToTokens`:
            &'a T
            &'a mut T
            Box<T>
            Cow<'a, T>
            Option<T>
            Rc<T>
            RepInterp<T>
            String
          and $N others
